# Arkade

./: CMakeLists.txt  README.md
datasets/: change_kitti.py  ground_truth.cpp  normalize.py  process_gbif.py  process_osm.py  process_stanfordgowalla.py  process_tweets.py  sample_gowalla.txt
owl/: DeviceContext.cpp  TrianglesGeomGroup.h
src/s01-knn/: CMakeLists.txt  deviceCode.cu  deviceCode.h  hostCode.cpp
src/s02-withTrueknn/: CMakeLists.txt  deviceCode.cu  deviceCode.h  hostCode.cpp  initial_estimate.py
